@startuml

title __HOME's Class Diagram__\n

  namespace ru.ubunterro.servicehelper {
    namespace ui.home {
      class ru.ubunterro.servicehelper.ui.home.HomeFragment {
          + onCreateView()
      }
    }
  }
  

  namespace ru.ubunterro.servicehelper {
    namespace ui.home {
      class ru.ubunterro.servicehelper.ui.home.HomeViewModel {
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  ru.ubunterro.servicehelper.ui.home.HomeFragment -up-|> android.support.v4.app.Fragment
  ru.ubunterro.servicehelper.ui.home.HomeFragment o-- ru.ubunterro.servicehelper.ui.home.HomeViewModel : homeViewModel
  ru.ubunterro.servicehelper.ui.home.HomeViewModel -up-|> android.arch.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
